--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -11,14 +11,14 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('main.index') }}">VPS-Uploader</a>
+          <a class="navbar-brand" href="{{ url_for('main.index') }}">TEBI-Tester</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"></a>
+                <a class="nav-link" href="{{ url_for('main.tests') }}">Tests</a>
               </li>
             </ul>
           </div>
