fix json parse error

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -46,6 +46,7 @@
     function upload_url_submit(e) {
       e.preventDefault();
       result_execution_speed.innerHTML = '';
+      result_upload.innerHTML = '';
       form_submit_btn.disabled = true;
 
       let url = form_upload_url.url.value;
