add execution time field to test model

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -6,6 +6,8 @@
     .result {
       white-space: pre-wrap;
       word-wrap: break-word;
+      overflow-x: auto;
+      max-height: 800px;
     }
   </style>
 {% endblock %}
