--- a/web/app/templates/tests.html
+++ b/web/app/templates/tests.html
@@ -21,6 +21,10 @@
       background-color: #e9ecef;
       border-radius: 3px;
     }
+    .content pre {
+      overflow-x: auto;
+      max-height: 800px;
+    }
     .unselectable {
       -webkit-touch-callout: none;
       -webkit-user-select: none;
@@ -41,6 +45,7 @@
           <div class="folder unselectable"><span>Id: {{ test.id }}, {{ test.datetime.strftime('%Y-%m-%d %H:%M:%S') }}</span><span class="icon">▷</span></div>
           <div class="content" style="display: none">
             <div>Url: {{ test.url }}</div>
+            <div>Execution time: {{ test.execution_time }}</div>
             <pre>{{ test.content }}</pre>
           </div>
         </div>
