--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -17,6 +17,10 @@
       <div id="upload-url-container">
         <form method="post" enctype="multipart/form-data">
           <input class="form-control mb-3" name="url" required>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="monopoly">
+            <label class="form-check-label" for="monopoly">Monopoly mode</label>
+          </div>
           <input class="btn btn-primary" type="submit" value="Send link">
         </form>
       </div>
@@ -51,16 +55,22 @@
       form_submit_btn.disabled = true;
 
       let url = form_upload_url.url.value;
+      let monopoly = form_upload_url.monopoly.checked;
 
       const response = await fetch(upload_url, {
         method: "POST",
-        body: JSON.stringify({url: url}),
+        body: JSON.stringify({url: url, monopoly: monopoly}),
         headers: {
           'Content-Type': 'application/json'
         }
       })
       .then(response => { return response.json(); })
       .then(data => {
+        if (data.error) {
+          result_upload.innerHTML = data.error;
+          form_submit_btn.disabled = false;
+        }
+
         console.log(data)
         const sse_stream_url = data.sse_stream_url;
         listen_upload(sse_stream_url, result_upload);
