fix negative value active_tests

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -101,7 +101,7 @@
 
           const ttfb_client = (endTime - startTime) / 1000;
 
-          result_execution_speed.innerHTML = `Time to response:<br>TTFB: ${ttfb_client.toFixed(2)} s`;
+          result_execution_speed.innerHTML = `Execution time: ${ttfb_client.toFixed(2)} s`;
 
           closeSource(source)
         }
