improve waiting for test execucion

--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -21,7 +21,9 @@
             <input type="checkbox" class="form-check-input" id="monopoly">
             <label class="form-check-label" for="monopoly">Monopoly mode</label>
           </div>
+          <label class="form-check-label" for="speed">Speed(mbps)</label>
           <input type="number" min="1" value="100" class="form-control mb-3" name="speed" required>
+          <label class="form-check-label" for="eta">Eta(timestamp)</label>
           <input type="number" min="1" class="form-control mb-3" name="eta">
           <input class="btn btn-primary" type="submit" value="Send link">
         </form>
